<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/maroon"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back_icon"
            android:padding="3dp"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <!-- Title Text -->
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/statistics"
            android:textColor="@android:color/white"
            android:textSize="27sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        style="@android:style/Widget.Spinner.DropDown"
        android:id="@+id/cwsNameSpinner"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/select_cws_name"
        />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        style="@android:style/Widget.Spinner.DropDown"
        android:id="@+id/monthSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cwsNameSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/yearSpinner"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_bias="0.5"
        android:contentDescription="@string/select_month"
        />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        style="@android:style/Widget.Spinner.DropDown"
        android:id="@+id/yearSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/cwsNameSpinner"
        app:layout_constraintStart_toEndOf="@id/monthSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/select_year"
        />


    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Light"
        android:id="@+id/plot"
        android:layout_width="fill_parent"
        android:layout_marginTop="35dp"
        android:layout_height="300dp"
        app:title="DATE_SCORE PLOT"
        app:rangeTitle="SCORE"
        app:domainTitle="DATE"
        app:layout_constraintTop_toBottomOf="@id/monthSpinner"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
