
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/rounded_bg">
    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/baseline_close_24"
        android:padding="8dp"
        android:contentDescription="@string/close_icon_description"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginBottom="3dp" />

    <TextView
        android:id="@+id/popUpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/category_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="30dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginBottom="16dp">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/save_btn"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@color/maroon"
        android:layout_marginTop="16dp" />
</LinearLayout>