<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="15dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/popUpTextNumbering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/border_radius"
            android:padding="15dp"
            android:text="1"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/popUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/popUpTextNumbering"
            android:text="@string/answer_txt"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </RelativeLayout>

    <!-- Button group for Question 1 -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/border_green"
            android:text="@string/yes_txt"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/noButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_maroon"
            android:text="@string/no_txt"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/skipButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/border_grey"
            android:text="@string/skip"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
