<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewstationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/maroon">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back_icon"
            android:padding="3dp"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Add_station"
            android:textColor="@android:color/white"
            android:textSize="27sp" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Input Fields -->
    <EditText
        android:id="@+id/cwsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="CWS NAME"/>

    <EditText
        android:id="@+id/cwsLeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cwsName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint=" CWS LEADER"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cwsLeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="LOCATION"/>

    <!-- Button -->
    <Button
        android:id="@+id/Add"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:layout_below="@id/location"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:backgroundTint="@color/maroon" />

</RelativeLayout>
